# ExpoSizeStringSearch

./: README.md  aggro.cpp  approximate.cpp  countDistinctSubstrings.cpp  improvementTests.cpp  offline.cpp  offlineNoCompression.cpp  substringDistribution.cpp
benchmarks/sources/: es5_clean.cpp  es6_clean.cpp  es7.5_clean.cpp  fastmap.h  hash.h  logger.h
comparison/: README  README.md  runExecutables
comparison/generatorSources/: generator.cpp  generatorFibonacci.cpp  generatorPeriod.cpp
comparison/sources/: ahoCorasick_neal.cpp  myOffline.cpp  suffixArray_ILHY.cpp  suffixAutomaton_randmod3.cpp  suffixTree_elaina.cpp
comparisonSources/: ahoCorasick_neal.cpp  suffixArray_ILHY.cpp  suffixAutomaton_randmod3.cpp  suffixTree_elaina.cpp
llm_intersection_local/: cacher_parquet_tokens.py  process_pythia_output.py  pythia_gen.py  run_pythia_gen.sh  sendJobCacher  sendJobE3S
llm_intersection_local/E3S/: E3S.cpp  E3S.h  Makefile  main.cpp  parquet_parser.py
llm_intersection_local/E3S_sawn_off/: Makefile  e3s_sawnoff.cu  e3s_sawnoff.h  main.cu  readers.cu  readers.h  utils.cu  utils.h
llm_intersection_local/E3S_sawn_off/solvers/: base_pq_solver.cu  base_pq_solver.h  cses_solver.cu  cses_solver.h
llm_intersection_local/ipynbs/: compute-extracted-tokens-percentage.ipynb
llm_intersection_local/test_parquet/: Makefile  main.cpp  parquet_cpp_install_steps.md
nlp/: Makefile  README.md  generateTest.py  runExecutables
nlp/LLMSamples/: hobbit.json
nlp/sources/: ahoCorasick_neal.cpp  myOffline.cpp  suffixArray_ILHY.cpp  suffixAutomaton_randmod3.cpp  suffixTree_elaina.cpp
nonImplicitImplementations/: compressedHashedString.cpp  countDistinctSubstrings.cpp  improvementTests.cpp  offline.cpp  online.cpp
snort_benchmark/: README.md
snort_benchmark/snort3_demo/tests/search_engines/bruteforce/: snort.lua  snort_defaults.lua  test.bats
snort_benchmark/snort3_extra/src/search_engines/: CMakeLists.txt
snort_benchmark/snort3_extra/src/search_engines/E3S/: CMakeLists.txt  E3S.cc  E3S_api.cc  E3S_utils.cc  E3S_utils.h
snort_benchmark/snort3_extra/src/search_engines/E3Saggro/: CMakeLists.txt  E3Saggro.cc  E3Saggro_api.cc  E3Saggro_utils.cc  E3Saggro_utils.h
snort_benchmark/snort3_extra/src/search_engines/E3Saggrocl/: CMakeLists.txt  E3Saggrocl.cc  E3Saggrocl_api.cc  E3Saggrocl_kernel.ocl  E3Saggrocl_utils.cc  E3Saggrocl_utils.h
snort_benchmark/snort3_extra/src/search_engines/bruteforce/: CMakeLists.txt  bruteforce.cc  bruteforce_api.cc
